[package]
name = "raytracer"
version = "0.1.0"
authors = ["Andreas Olofsson <ao@blazar.se>"]
edition = "2018"

[dependencies]
conrod_core = { version = "0.64.0" }
conrod_glium = { version = "0.64.0" }
conrod_winit = { version = "0.64.0" }
glium = { version = "0.23" }
find_folder = "0.3.0"
winit = "0.18"